--- a/assets/plugins/font-awesome/css/font-awesome.css
+++ b/assets/plugins/font-awesome/css/font-awesome.css
@@ -2316,6 +2316,9 @@
 .fa-meetup:before {
   content: "\f2e0";
 }
+.fa-kakao:before {
+  content: "\e900";
+}
 .sr-only {
   position: absolute;
   width: 1px;
